add android stuido 3.4 rc 1 links

--- a/index.html
+++ b/index.html
@@ -431,6 +431,41 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.4 RC fa-battery-41 -->
+                            <tr>
+                                <td rowspan="5">3.4 RC 1</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.15/android-studio-ide-183.5341121-windows.zip">android-studio-ide-183.5341121-windows.zip</a>
+                                </td>
+                                <td>1084870562 bytes</td>
+                                <td>04b43ede792db562aa02b66e5bd5b2ef9664312b6d108a70b940f589bddc30dc</td>
+                                <td rowspan="5"><a href="https://ws2.sinaimg.cn/large/006tKfTcly1g0woblp9zgj31cs0jmdln.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.15/android-studio-ide-183.5341121-windows32.zip">android-studio-ide-183.5341121-windows32.zip</a>
+                                </td>
+                                <td>1084344491 bytes</td>
+                                <td>747825504d199158490ae57268773b161418f22794ceb7a9b8bf029508ae8fb7</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.15/android-studio-ide-183.5341121-mac.zip">android-studio-ide-183.5341121-mac.dmg</a>
+                                </td>
+                                <td>1077729544 bytes</td>
+                                <td>56bd1e2f450d9f7eb696934785b80631f70dfc6c0608db3d1c1b7739c01bf56e</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.15/android-studio-ide-183.5341121-linux.zip">android-studio-ide-183.5341121-linux.zip</a>
+                                </td>
+                                <td>1090861297 bytes</td>
+                                <td>fe7f618a4d0b93fc59f4c2f7458e5417741be0b2650da26918a0e5f56d53fc68</td>
+                            </tr>
                             <!-- 3.3.2 正式版 -->
                             <tr>
                                 <td rowspan="5">3.3.2 正式版</td>
