add android studio 3.5 rc7 links

--- a/index.html
+++ b/index.html
@@ -431,6 +431,41 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.5 Canary 7 -->
+                            <tr>
+                                <td rowspan="5">3.5 Canary 7</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.6/android-studio-ide-183.5346365-windows.zip">android-studio-ide-183.5346365-windows.zip</a>
+                                </td>
+                                <td>1064362897 bytes</td>
+                                <td>b01848b576dfdcba8cb8023d5aa8136c47859aca00222cf14c18d8df17817b18</td>
+                                <td rowspan="5"><a href="https://ws2.sinaimg.cn/large/006tKfTcly1g0zrqgnkqgj30qd09vdi7.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.6/android-studio-ide-183.5346365-windows32.zip">android-studio-ide-183.5346365-windows32.zip</a>
+                                </td>
+                                <td>1063836826 bytes</td>
+                                <td>4d2ff9599eed7a3d3c61dc560a45b90c81479a6bbedb7b4639366091c9c1a6aa</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.6/android-studio-ide-183.5346365-mac.zip">android-studio-ide-183.5346365-mac.dmg</a>
+                                </td>
+                                <td>1056186930 bytes</td>
+                                <td>00afe685246fac78ac554b22276248d4c33579d743a3beaa656b4fb65e58e97c</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.6/android-studio-ide-183.5346365-linux.zip">android-studio-ide-183.5346365-linux.zip</a>
+                                </td>
+                                <td>1070351444 bytes</td>
+                                <td>407af7b8320028732185babc186265ec3efa2e8b6f6cff38433b2fd5f587d335</td>
+                            </tr>
                             <!-- 3.4 RC fa-battery-41 -->
                             <tr>
                                 <td rowspan="5">3.4 RC 1</td>
