--- a/index.html
+++ b/index.html
@@ -431,6 +431,41 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.4 RC 2 -->
+                            <tr>
+                                <td rowspan="5">3.4 RC 2</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.16/android-studio-ide-183.5370308-windows.zip">android-studio-ide-183.5370308-windows.zip</a>
+                                </td>
+                                <td>1085146949 bytes</td>
+                                <td>08dee6606ac36d804b21dd4a003e2b8928b21c497db75e3464762dd0bef34fcc</td>
+                                <td rowspan="5"><a href="https://ws2.sinaimg.cn/large/006tKfTcly1g138hek00lj31ea0k4afz.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.16/android-studio-ide-183.5370308-windows32.zip">android-studio-ide-183.5370308-windows32.zip</a>
+                                </td>
+                                <td>1084620878 bytes</td>
+                                <td>fa380bf5de945a3308e8c2c99c1da962f88ade946f2e61262f592c9908be03a6</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.16/android-studio-ide-183.5370308-mac.zip">android-studio-ide-183.5370308-mac.dmg</a>
+                                </td>
+                                <td>1078005988 bytes</td>
+                                <td>bc332ba7a8fee6c62cabb0b9a2eea47981e5f12dfe56c502c910d339999705f3</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.16/android-studio-ide-183.5370308-linux.zip">android-studio-ide-183.5370308-linux.zip</a>
+                                </td>
+                                <td>1091137682 bytes</td>
+                                <td>090b1d6e39e9cc0b4e01943420eeecb8a611785e9cafe9dbedf0ff608f35ed34</td>
+                            </tr>
                             <!-- 3.5 Canary 7 -->
                             <tr>
                                 <td rowspan="5">3.5 Canary 7</td>
@@ -466,7 +501,7 @@
                                 <td>1070351444 bytes</td>
                                 <td>407af7b8320028732185babc186265ec3efa2e8b6f6cff38433b2fd5f587d335</td>
                             </tr>
-                            <!-- 3.4 RC fa-battery-41 -->
+                            <!-- 3.4 RC 1 -->
                             <tr>
                                 <td rowspan="5">3.4 RC 1</td>
                             </tr>
@@ -537,181 +572,6 @@
                                 </td>
                                 <td>1064031415 bytes</td>
                                 <td>8257d3eab61c3da088e26689888a13e53e210c109a4e775ed71158b4471bb06a</td>
-                            </tr>
-                            <!-- 3.5 Canary 6 -->
-                            <tr>
-                                <td rowspan="5">3.5 Canary 6</td>
-                            </tr>
-                            <tr>
-                                <td rowspan="2">Windows</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.5/android-studio-ide-183.5326993-windows.zip">android-studio-ide-183.5326993-windows.zip</a>
-                                </td>
-                                <td>1025958122 bytes</td>
-                                <td>140709ea6e2ff245aa4c35bee6b613a283759309b2b98de9c4bd4c70635b21d9</td>
-                                <td rowspan="5"><a href="https://ws2.sinaimg.cn/large/006tKfTcly1g0n39qcnxbj30os0ewn09.jpg">查看</a></td>
-                            </tr>
-                            <tr>
-                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.5/android-studio-ide-183.5326993-windows32.zip">android-studio-ide-183.5326993-windows32.zip</a>
-                                </td>
-                                <td>1025432051 bytes</td>
-                                <td>7ceea18da053f9daa6ab2faa622797450448a1f6155a4c1c3c318163cbae18b0</td>
-                            </tr>
-                            <tr>
-                                <td>Mac OS X</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.5/android-studio-ide-183.5326993-mac.zip">android-studio-ide-183.5326993-mac.dmg</a>
-                                </td>
-                                <td>1017781980 bytes</td>
-                                <td>4bd9927b71085444936736936e21d1a63743af3c7fb4c5861c0529661b0e235f</td>
-                            </tr>
-                            <tr>
-                                <td>Linux</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.5/android-studio-ide-183.5326993-linux.zip">android-studio-ide-183.5326993-linux.zip</a>
-                                </td>
-                                <td>1031946595 bytes</td>
-                                <td>1467c8418726188f48108cdeac1a6186bd5d288631c65cb7f1f79b0b381ea419</td>
-                            </tr>
-                            <!-- 3.5 Canary 5 -->
-                            <tr>
-                                <td rowspan="5">3.5 Canary 5</td>
-                            </tr>
-                            <tr>
-                                <td rowspan="2">Windows</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.4/android-studio-ide-183.5320907-windows.zip">android-studio-ide-183.5320907-windows.zip</a>
-                                </td>
-                                <td>1023701223 bytes</td>
-                                <td>4614423e78aceb10e29411a157d3b96bcb40e82691a7c92555429bf511035171</td>
-                                <td rowspan="5"><a href="https://ws1.sinaimg.cn/large/006tKfTcly1g0n3gfiamhj30tr0avgo2.jpg">查看</a></td>
-                            </tr>
-                            <tr>
-                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.4/android-studio-ide-183.5320907-windows32.zip">android-studio-ide-183.5320907-windows32.zip</a>
-                                </td>
-                                <td>1023175152 bytes</td>
-                                <td>fbc104af9fad18c334f492c6ed4dad98ddf523f0b734696762fae0cbe060e7a3</td>
-                            </tr>
-                            <tr>
-                                <td>Mac OS X</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.4/android-studio-ide-183.5320907-mac.zip">android-studio-ide-183.5320907-mac.dmg</a>
-                                </td>
-                                <td>1015518739 bytes</td>
-                                <td>0cce015e4990cd79156d9595290794abea552547eb74d4b7ad6bd1c540e48427</td>
-                            </tr>
-                            <tr>
-                                <td>Linux</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.4/android-studio-ide-183.5320907-linux.zip">android-studio-ide-183.5320907-linux.zip</a>
-                                </td>
-                                <td>1030815178 bytes</td>
-                                <td>2f68dc60d83722155c9b0e2f9f643fab2a50d3d7b015a446a734733651c9a6c4</td>
-                            </tr>
-                            <!-- 3.4 Beta 5 -->
-                            <tr>
-                                <td rowspan="5">3.4 Beta 5</td>
-                            </tr>
-                            <tr>
-                                <td rowspan="2">Windows</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.14/android-studio-ide-183.5310756-windows.zip">android-studio-ide-183.5310756-windows.zip</a>
-                                </td>
-                                <td>1084731250 bytes</td>
-                                <td>9131abbd977d63b8de00c4899b5a6efd9c98f943f6b5b0336b001cc45d695f75</td>
-                                <td rowspan="5"><a href="https://ws4.sinaimg.cn/large/006tKfTcly1g0n3jsadd4j30oy0a7di6.jpg">查看</a></td>
-                            </tr>
-                            <tr>
-                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.14/android-studio-ide-183.5310756-windows32.zip">android-studio-ide-183.5310756-windows32.zip</a>
-                                </td>
-                                <td>1084205179 bytes</td>
-                                <td>d6aade84effbe368df7141c37056e05596bb9f3a3ebdb0cdc3e6e82e851d4dd0</td>
-                            </tr>
-                            <tr>
-                                <td>Mac OS X</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.14/android-studio-ide-183.5310756-mac.zip">android-studio-ide-183.5310756-mac.dmg</a>
-                                </td>
-                                <td>1077883743 bytes</td>
-                                <td>1c9db226d02ac06954f03073de401a208fb8da618d8c289980e12cd7e80c2fe4</td>
-                            </tr>
-                            <tr>
-                                <td>Linux</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.14/android-studio-ide-183.5310756-linux.zip">android-studio-ide-183.5310756-linux.zip</a>
-                                </td>
-                                <td>1091845208 bytes</td>
-                                <td>7809da5e2ef7c5594efeb3c518264b6384a96c8804dc57d94cfce28d0130e85a</td>
-                            </tr>
-                            <!-- 3.5 Canary 4 -->
-                            <tr>
-                                <td rowspan="5">3.5 Canary 4</td>
-                            </tr>
-                            <tr>
-                                <td rowspan="2">Windows</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.3/android-studio-ide-183.5290690-windows.zip">android-studio-ide-183.5290690-windows.zip</a>
-                                </td>
-                                <td>1023270329 bytes</td>
-                                <td>dabb19a8e095e9d62be15adad50997d29afc17be0b1692669002ef1c96b5e68e</td>
-                                <td rowspan="5"><a href="https://ws2.sinaimg.cn/large/006tKfTcly1g0n3mvojc1j30pf09wdi7.jpg">查看</a></td>
-                            </tr>
-                            <tr>
-                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.3/android-studio-ide-183.5290690-windows32.zip">android-studio-ide-183.5290690-windows32.zip</a>
-                                </td>
-                                <td>1022744258 bytes</td>
-                                <td>12314df3577c88a116d218b3e273250d75dcba1e921c0d37245f9d456a67860c</td>
-                            </tr>
-                            <tr>
-                                <td>Mac OS X</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.3/android-studio-ide-183.5290690-mac.zip">android-studio-ide-183.5290690-mac.dmg</a>
-                                </td>
-                                <td>1015087333 bytes</td>
-                                <td>7f7038bb18226d3df749bac41616e7a92501169210e4fe878121e25c3c804bc1</td>
-                            </tr>
-                            <tr>
-                                <td>Linux</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.3/android-studio-ide-183.5290690-linux.zip">android-studio-ide-183.5290690-linux.zip</a>
-                                </td>
-                                <td>1030384284 bytes</td>
-                                <td>a1f57d897b614edfce066cfd90ca985d2e12568763330da4d2f316b1d0a12c34</td>
-                            </tr>
-                            <!-- 3.4 Beta 4 -->
-                            <tr>
-                                <td rowspan="5">3.4 Beta 4</td>
-                            </tr>
-                            <tr>
-                                <td rowspan="2">Windows</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.13/android-studio-ide-183.5304277-windows.zip">android-studio-ide-183.5304277-windows.zip</a>
-                                </td>
-                                <td>1084719151 bytes</td>
-                                <td>14dabf21993cef762dec5a05a57f91065c455778fbc5e149b9d58b7a648e2241</td>
-                                <td rowspan="5"><a href="https://ws4.sinaimg.cn/large/006tKfTcly1g0n3p1u222j30pj09s0v1.jpg">查看</a></td>
-                            </tr>
-                            <tr>
-                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.13/android-studio-ide-183.5304277-windows32.zip">android-studio-ide-183.5304277-windows32.zip</a>
-                                </td>
-                                <td>1084193080 bytes</td>
-                                <td>c98b55275478d7d7016b4ec4654b245b9f3e04e657aff91d84b07276b6b31efb</td>
-                            </tr>
-                            <tr>
-                                <td>Mac OS X</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.13/android-studio-ide-183.5304277-mac.zip">android-studio-ide-183.5304277-mac.dmg</a>
-                                </td>
-                                <td>1077871652 bytes</td>
-                                <td>dd5021a05dc513cbf9e834cea3cabb8bc478613f12ee9f5563c80343caed8a50</td>
-                            </tr>
-                            <tr>
-                                <td>Linux</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.13/android-studio-ide-183.5304277-linux.zip">android-studio-ide-183.5304277-linux.zip</a>
-                                </td>
-                                <td>1091833108 bytes</td>
-                                <td>0ee5a531efd235df188d36df7670f97c9f24f80e10f0c747105a1607d4eaa707</td>
                             </tr>
                             <!-- 3.3.1 正式版 -->
                             <tr>
