add HenCoderPlus ad info

--- a/index.html
+++ b/index.html
@@ -174,6 +174,12 @@
         </div>
     </header>
     <div id="auto-scroll-ad-box" style="z-index: 10; right: 0px; position: absolute; top: 1012px;">
+        <div class="ad-float-right">
+            <a href="https://plus.hencoder.com" title="用碎片化的时间，学习系统化内容；短期暴力提升，快速突破瓶颈。HenCoder Plus 作为一套全方位系统化的在线直播课程，开课两期以来，吸纳了来自 BAT、头条、滴滴等公司以及硅谷、台湾和日本的众多学员报名参加，并且众多学员在毕业一个月内先后入职阿里、腾讯、小米、头条等公司。其中一位学员拿到 80w+ 的年薪，多位学员年薪达到 45w 左右。" onclick="trackOutboundLink('https://plus.hencoder.com', 'AD-HenCoderPlus', 'click');"
+                target="_blank">
+                <img src="https://ws2.sinaimg.cn/large/006tKfTcly1g1bt4kfbxej30770bm0uw.jpg" style="height: 313.5px; width: 192.5px;">
+            </a>
+        </div>
         <div class="ad-float-right hide">
             <a href="https://promotion.aliyun.com/ntms/act/vmpt/aliyun-group/home.html?userCode=j7dufdfe&utm_source=androiddevtools.cn&utm_medium=website-rightbar" title="【全民云计算升级】拼团上云更优惠，拉1人拼团，云服务器立享￥234" target="_blank">
                 <img src="https://ws2.sinaimg.cn/large/006tNbRwly1fweuai7fnij303k03kt9c.jpg">
@@ -194,7 +200,7 @@
                 <img src="https://ws3.sinaimg.cn/large/006tNc79ly1fsxmbit9nlj30m60vgq8w.jpg" style="height: 209px; width: 130px;">
             </a>
         </div>
-        <div class="ad-float-right">
+        <div class="ad-float-right hide">
             <a href="https://promotion.aliyun.com/ntms/act/qwbk.html?userCode=j7dufdfe" title="全民云计算 爆款云服务器低至 2 折，1 核 1G ¥ 293元/年" onclick="trackOutboundLink('https://promotion.aliyun.com/ntms/act/qwbk.html?userCode=j7dufdfe', 'AD-Aliyun-cloud-host-2', 'click');"
                 target="_blank">
                 <img src="https://ws2.sinaimg.cn/large/006tNbRwly1fxb2m2t9jqj308w0bvt93.jpg" style="height: 209px; width: 130px;">
@@ -215,7 +221,7 @@
                 <img src="https://ws2.sinaimg.cn/large/006tNbRwly1fwn5gssu4hj30780bmaal.jpg" style="height: 209px; width: 130px;">
             </a>
         </div>
-        <div class="ad-float-right">
+        <div class="ad-float-right hide">
             <a href="http://gk.link/a/102a3" title="丁雪丰--平安壹钱包高级架构师、《Spring Boot 实战》和《Spring 攻略》译者，带你玩转 Spring 全家桶，一站通关 Spring、Spring Boot 与 Spring Cloud。" onclick="trackOutboundLink('http://gk.link/a/102a3', 'AD-GeekTime-Play-Spring-Bucket', 'click');" target="_blank">
                 <img src="https://ws3.sinaimg.cn/large/006tNc79ly1g03fvn1y10j30u01hdadf.jpg" style="height: 209px; width: 130px;">
             </a>
@@ -266,11 +272,6 @@
             <a href="https://weidian.com/item.html?itemID=2189752818&amp;ifr=itemdetail&amp;wfr=androiddevtools&amp;from=click-right-float-sidebar" title="朋友家自己种的新鲜脆甜烟台大苹果🍎10斤/62元包邮，纯天然无公害，不打蜡" onclick="trackOutboundLink('https://weidian.com/item.html?itemID=2189752818', 'AD-YanTaiBigApple', 'click');"
                 target="_blank">
                 <img src="https://ws2.sinaimg.cn/large/006tNc79ly1fl65xenyvbj303m03mdgb.jpg">
-            </a>
-        </div>
-        <div class="ad-float-right hide">
-            <a href="http://hencoder.com" title="扔物线辞职在家憋了一年的大招，良心之作。" onclick="trackOutboundLink('http://hencoder.com', 'AD-HenCoder', 'click');" target="_blank">
-                <img src="http://ws4.sinaimg.cn/large/006tKfTcly1fhw3x0gn80j303m03mjrd.jpg">
             </a>
         </div>
         <div class="ad-float-right hide">
