add android studio 3.5 canary 8 links

--- a/index.html
+++ b/index.html
@@ -432,6 +432,41 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.5 Canary 8 -->
+                            <tr>
+                                <td rowspan="5">3.5 Canary 8</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.8/android-studio-ide-191.5375575-windows.zip">android-studio-ide-191.5375575-windows.zip</a>
+                                </td>
+                                <td>1033512799 bytes</td>
+                                <td>1d71c0427510c219a49f6d851182a03f57d1a4b9d74136ab4cb2ba0dc99bb59d</td>
+                                <td rowspan="5"><a href="https://ws3.sinaimg.cn/large/006tKfTcly1g1geig7rzpj315f0fawi3.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.8/android-studio-ide-191.5375575-windows32.zip">android-studio-ide-191.5375575-windows32.zip</a>
+                                </td>
+                                <td>1032986728 bytes</td>
+                                <td>a5ea8a4adef445257193cab3841fb138a7721573aef2c3de132fd19788edeb5d</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.8/android-studio-ide-191.5375575-mac.zip">android-studio-ide-191.5375575-mac.dmg</a>
+                                </td>
+                                <td>1025340448 bytes</td>
+                                <td>293080055c49c220ea818867343ec45be4431addf0cbcde484d0565adf8f58f8</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.8/android-studio-ide-191.5375575-linux.zip">android-studio-ide-191.5375575-linux.zip</a>
+                                </td>
+                                <td>1039501588 bytes</td>
+                                <td>b2928ec9a1bce33972ef9fef51eaac490e466364b424986c5c9d4820b7f55a6f</td>
+                            </tr>
                             <!-- 3.4 RC 2 -->
                             <tr>
                                 <td rowspan="5">3.4 RC 2</td>
