add android studio 3.4 rc3 links

--- a/index.html
+++ b/index.html
@@ -432,6 +432,41 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.4 RC 3 -->
+                            <tr>
+                                <td rowspan="5">3.4 RC 3</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.17/android-studio-ide-183.5400832-windows.zip">android-studio-ide-183.5400832-windows.zip</a>
+                                </td>
+                                <td>1085195328 bytes</td>
+                                <td>549d16f4fa2b8ef9fa6c2e323f925967e75616cc2441c006e69b25bd93280e50</td>
+                                <td rowspan="5"><a href="https://ws3.sinaimg.cn/large/006tKfTcly1g1obanme56j31f20j87a5.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.17/android-studio-ide-183.5400832-windows32.zip">android-studio-ide-183.5400832-windows32.zip</a>
+                                </td>
+                                <td>1084669257 bytes</td>
+                                <td>f5c82425919f1f0700a191b68572bac80c1409280d76107f2f2b30b5564579dc</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.17/android-studio-ide-183.5400832-mac.zip">android-studio-ide-183.5400832-mac.dmg</a>
+                                </td>
+                                <td>1078054367 bytes</td>
+                                <td>3542060b8f14a6acfcd8b5094789a713da101699ce5de3991e628d74c80a5395</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.17/android-studio-ide-183.5400832-linux.zip">android-studio-ide-183.5400832-linux.zip</a>
+                                </td>
+                                <td>1091186070 bytes</td>
+                                <td>01fb2de2c1650d99d5f4c9a706034780e712e0af8648243fdc0a36390ebb8aec</td>
+                            </tr>
                             <!-- 3.5 Canary 9 -->
                             <tr>
                                 <td rowspan="5">3.5 Canary 9</td>
