add lizhi ad info

--- a/index.html
+++ b/index.html
@@ -293,6 +293,13 @@
 
     <div class="banner has-dots" id="ad-banner-list">
         <ul>
+            <li style="background-image: url(https://ws3.sinaimg.cn/large/006tKfTcgy1g1p7mmzhatj32bc0rsn0h.jpg); width: 25%;" data-link="https://partner.lizhi.io/androiddevtools/cp?utm_source=androiddevtools.cn&amp;utm_medium=banner" data-tag="LiZhi-li" data-event-type="click">
+                <div class="inner">
+                    <h1>众多精选正版软件</h1>
+                    <p style="color: darkgray">买正版，售后好，三折起<br/><br/><br/></p>
+                    <a class="btn" href="https://partner.lizhi.io/androiddevtools/cp?utm_source=androiddevtools.cn&amp;utm_medium=banner" onclick="trackOutboundLink('https://partner.lizhi.io/androiddevtools/cp', 'LiZhi-Button', 'click');" title="">去领劵</a>
+                </div>
+            </li>
             <li style="background-image: url(https://ws3.sinaimg.cn/large/006tNbRwly1fwetsi98l7j31ef0jogmj.jpg); width: 25%;" data-link="https://androidweekly.io/android-pie/?utm_source=androiddevtools_banner&amp;utm_medium=website" data-tag="Android-P-li" data-event-type="click">
                 <div class="inner">
                     <h1>Android Pie</h1>
