--- a/index.html
+++ b/index.html
@@ -439,6 +439,41 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.5 Canary 10 -->
+                            <tr>
+                                <td rowspan="5">3.5 Canary 10</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.9/android-studio-ide-191.5416148-windows.zip">android-studio-ide-191.5416148-windows.zip</a>
+                                </td>
+                                <td>1030358202 bytes</td>
+                                <td>f31b09723891c3fe460081b2bd260e214fee1ff3919961b81a94192faeea1298</td>
+                                <td rowspan="5"><a href="https://ws4.sinaimg.cn/large/006tNc79ly1g1rnn9899lj30pq0ct41a.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.9/android-studio-ide-191.5416148-windows32.zip">android-studio-ide-191.5416148-windows32.zip</a>
+                                </td>
+                                <td>1029821241 bytes</td>
+                                <td>e1b30254ccf8875fc35e70b182f3ac84bb5e1294132caf0119dc836030263773</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.9/android-studio-ide-191.5416148-mac.zip">android-studio-ide-191.5416148-mac.dmg</a>
+                                </td>
+                                <td>1022327717 bytes</td>
+                                <td>4a1b5fcba31e2230ae02f50fd1733e891de3e3cd9a91bf301d714c7f6c7c1cc5</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.9/android-studio-ide-191.5416148-linux.tar.gz">android-studio-ide-191.5416148-linux.tar.gz</a>
+                                </td>
+                                <td>1035877800 bytes</td>
+                                <td>11d73105f17ceb9aef13a144266a1f87aa9c8bf1681dd6db09846b8597e9a20d</td>
+                            </tr>
                             <!-- 3.4 RC 3 -->
                             <tr>
                                 <td rowspan="5">3.4 RC 3</td>
@@ -481,14 +516,14 @@
                             <tr>
                                 <td rowspan="2">Windows</td>
                                 <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.9/android-studio-ide-191.5409101-windows.zip">android-studio-ide-191.5409101-windows.zip</a>
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.8/android-studio-ide-191.5409101-windows.zip">android-studio-ide-191.5409101-windows.zip</a>
                                 </td>
                                 <td>1034276698 bytes</td>
                                 <td>72c0fd313aafcfedafe3b2b7db6845721c6ccd82a0fbcbd2736f77a64273a924</td>
                                 <td rowspan="5"><a href="https://ws1.sinaimg.cn/large/006tKfTcly1g1md1p3sctj31io0oy45p.jpg">查看</a></td>
                             </tr>
                             <tr>
-                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.9/android-studio-ide-191.5409101-windows32.zip">android-studio-ide-191.5409101-windows32.zip</a>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.8/android-studio-ide-191.5409101-windows32.zip">android-studio-ide-191.5409101-windows32.zip</a>
                                 </td>
                                 <td>1033750627 bytes</td>
                                 <td>868c0e2447896331520b14b056cf7d8b39b546d91cd5122b9210ed43ba73bd1f</td>
@@ -496,7 +531,7 @@
                             <tr>
                                 <td>Mac OS X</td>
                                 <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.9/android-studio-ide-191.5409101-mac.zip">android-studio-ide-191.5409101-mac.dmg</a>
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.8/android-studio-ide-191.5409101-mac.zip">android-studio-ide-191.5409101-mac.dmg</a>
                                 </td>
                                 <td>1026105382 bytes</td>
                                 <td>7e913ff563836f2daee06e3627ceaed9b65c15cd662c9c1778b3368cbe663b14</td>
@@ -504,7 +539,7 @@
                             <tr>
                                 <td>Linux</td>
                                 <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.9/android-studio-ide-191.5409101-linux.zip">android-studio-ide-191.5409101-linux.zip</a>
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.8/android-studio-ide-191.5409101-linux.tar.gz">android-studio-ide-191.5409101-linux.tar.gz</a>
                                 </td>
                                 <td>1039748746 bytes</td>
                                 <td>f1a8963547b173b82c697f1455b08801fade27d39c0c86ac87a0760b082dcc19</td>
@@ -516,14 +551,14 @@
                             <tr>
                                 <td rowspan="2">Windows</td>
                                 <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.8/android-studio-ide-191.5375575-windows.zip">android-studio-ide-191.5375575-windows.zip</a>
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.7/android-studio-ide-191.5375575-windows.zip">android-studio-ide-191.5375575-windows.zip</a>
                                 </td>
                                 <td>1033512799 bytes</td>
                                 <td>1d71c0427510c219a49f6d851182a03f57d1a4b9d74136ab4cb2ba0dc99bb59d</td>
                                 <td rowspan="5"><a href="https://ws3.sinaimg.cn/large/006tKfTcly1g1geig7rzpj315f0fawi3.jpg">查看</a></td>
                             </tr>
                             <tr>
-                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.8/android-studio-ide-191.5375575-windows32.zip">android-studio-ide-191.5375575-windows32.zip</a>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.7/android-studio-ide-191.5375575-windows32.zip">android-studio-ide-191.5375575-windows32.zip</a>
                                 </td>
                                 <td>1032986728 bytes</td>
                                 <td>a5ea8a4adef445257193cab3841fb138a7721573aef2c3de132fd19788edeb5d</td>
@@ -531,7 +566,7 @@
                             <tr>
                                 <td>Mac OS X</td>
                                 <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.8/android-studio-ide-191.5375575-mac.zip">android-studio-ide-191.5375575-mac.dmg</a>
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.7/android-studio-ide-191.5375575-mac.zip">android-studio-ide-191.5375575-mac.dmg</a>
                                 </td>
                                 <td>1025340448 bytes</td>
                                 <td>293080055c49c220ea818867343ec45be4431addf0cbcde484d0565adf8f58f8</td>
@@ -539,7 +574,7 @@
                             <tr>
                                 <td>Linux</td>
                                 <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.8/android-studio-ide-191.5375575-linux.zip">android-studio-ide-191.5375575-linux.zip</a>
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.7/android-studio-ide-191.5375575-linux.zip">android-studio-ide-191.5375575-linux.zip</a>
                                 </td>
                                 <td>1039501588 bytes</td>
                                 <td>b2928ec9a1bce33972ef9fef51eaac490e466364b424986c5c9d4820b7f55a6f</td>
@@ -578,76 +613,6 @@
                                 </td>
                                 <td>1091137682 bytes</td>
                                 <td>090b1d6e39e9cc0b4e01943420eeecb8a611785e9cafe9dbedf0ff608f35ed34</td>
-                            </tr>
-                            <!-- 3.5 Canary 7 -->
-                            <tr>
-                                <td rowspan="5">3.5 Canary 7</td>
-                            </tr>
-                            <tr>
-                                <td rowspan="2">Windows</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.6/android-studio-ide-183.5346365-windows.zip">android-studio-ide-183.5346365-windows.zip</a>
-                                </td>
-                                <td>1064362897 bytes</td>
-                                <td>b01848b576dfdcba8cb8023d5aa8136c47859aca00222cf14c18d8df17817b18</td>
-                                <td rowspan="5"><a href="https://ws2.sinaimg.cn/large/006tKfTcly1g0zrqgnkqgj30qd09vdi7.jpg">查看</a></td>
-                            </tr>
-                            <tr>
-                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.6/android-studio-ide-183.5346365-windows32.zip">android-studio-ide-183.5346365-windows32.zip</a>
-                                </td>
-                                <td>1063836826 bytes</td>
-                                <td>4d2ff9599eed7a3d3c61dc560a45b90c81479a6bbedb7b4639366091c9c1a6aa</td>
-                            </tr>
-                            <tr>
-                                <td>Mac OS X</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.6/android-studio-ide-183.5346365-mac.zip">android-studio-ide-183.5346365-mac.dmg</a>
-                                </td>
-                                <td>1056186930 bytes</td>
-                                <td>00afe685246fac78ac554b22276248d4c33579d743a3beaa656b4fb65e58e97c</td>
-                            </tr>
-                            <tr>
-                                <td>Linux</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.6/android-studio-ide-183.5346365-linux.zip">android-studio-ide-183.5346365-linux.zip</a>
-                                </td>
-                                <td>1070351444 bytes</td>
-                                <td>407af7b8320028732185babc186265ec3efa2e8b6f6cff38433b2fd5f587d335</td>
-                            </tr>
-                            <!-- 3.4 RC 1 -->
-                            <tr>
-                                <td rowspan="5">3.4 RC 1</td>
-                            </tr>
-                            <tr>
-                                <td rowspan="2">Windows</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.15/android-studio-ide-183.5341121-windows.zip">android-studio-ide-183.5341121-windows.zip</a>
-                                </td>
-                                <td>1084870562 bytes</td>
-                                <td>04b43ede792db562aa02b66e5bd5b2ef9664312b6d108a70b940f589bddc30dc</td>
-                                <td rowspan="5"><a href="https://ws2.sinaimg.cn/large/006tKfTcly1g0woblp9zgj31cs0jmdln.jpg">查看</a></td>
-                            </tr>
-                            <tr>
-                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.15/android-studio-ide-183.5341121-windows32.zip">android-studio-ide-183.5341121-windows32.zip</a>
-                                </td>
-                                <td>1084344491 bytes</td>
-                                <td>747825504d199158490ae57268773b161418f22794ceb7a9b8bf029508ae8fb7</td>
-                            </tr>
-                            <tr>
-                                <td>Mac OS X</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.15/android-studio-ide-183.5341121-mac.zip">android-studio-ide-183.5341121-mac.dmg</a>
-                                </td>
-                                <td>1077729544 bytes</td>
-                                <td>56bd1e2f450d9f7eb696934785b80631f70dfc6c0608db3d1c1b7739c01bf56e</td>
-                            </tr>
-                            <tr>
-                                <td>Linux</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.15/android-studio-ide-183.5341121-linux.zip">android-studio-ide-183.5341121-linux.zip</a>
-                                </td>
-                                <td>1090861297 bytes</td>
-                                <td>fe7f618a4d0b93fc59f4c2f7458e5417741be0b2650da26918a0e5f56d53fc68</td>
                             </tr>
                             <!-- 3.3.2 正式版 -->
                             <tr>
