add android studio 3.4 and 3.5 canary 11 links

--- a/index.html
+++ b/index.html
@@ -439,6 +439,84 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.4 正式版 -->
+                            <tr>
+                                <td rowspan="6">3.4 正式版</td>
+                            </tr>
+                            <tr>
+                                <td>Windows IDE 安装版 (64-bit)</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/install/3.4.0.18/android-studio-ide-183.5452501-windows.exe">android-studio-ide-183.5452501-windows.exe</a>
+                                </td>
+                                <td>1019001384 bytes</td>
+                                <td>7e2c2c9a33e4e4d5d8e9403bc58c9aecbef32e2f0d6e8c95c184aed018bc38e9</td>
+                                <td rowspan="6"><a href="https://ws2.sinaimg.cn/large/006tNc79ly1g26nsrqzkvj31ik0siqbq.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td>Windows (64-bit)</td>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.18/android-studio-ide-183.5452501-windows.zip">android-studio-ide-183.5452501-windows.zip</a>
+                                </td>
+                                <td>1085190390 bytes</td>
+                                <td>8e89dc229425143e2c7a66338279eff48e33357447ac41d77f49f0fdba3ed60f</td>
+                            </tr>
+                            <tr>
+                                <td>Windows (32-bit)</td>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.18/android-studio-ide-183.5452501-windows32.zip">android-studio-ide-183.5452501-windows32.zip</a>
+                                </td>
+                                <td>1084664319 bytes</td>
+                                <td>0c8cba02b74f0ea2adab20c2d4c389bb5d59e02cc12ae1eb4e27ed1fb8cbbeac</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/install/3.4.0.18/android-studio-ide-183.5452501-mac.dmg">android-studio-ide-183.5452501-mac.dmg</a>
+                                </td>
+                                <td>1075126012 bytes</td>
+                                <td>fd6a66441024562284fcd82de50e82f5376cdd8715cf4fb6ce52948111fab674</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.18/android-studio-ide-183.5452501-linux.tar.gz">android-studio-ide-183.5452501-linux.tar.gz</a>
+                                </td>
+                                <td>1087166186 bytes</td>
+                                <td>ad2bd4be87a55cfaeee6f28d40d925691314c11862b303d411f9776b76fa1c45</td>
+                            </tr>
+                            <!-- 3.5 Canary 11 -->
+                            <tr>
+                                <td rowspan="5">3.5 Canary 11</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.10/android-studio-ide-191.5455988-windows.zip">android-studio-ide-191.5455988-windows.zip</a>
+                                </td>
+                                <td>1036445885 bytes</td>
+                                <td>70c289c514d668901d4eb17d91e58c2d25b3e314f9cd10dd339ed6934dc0254d</td>
+                                <td rowspan="5"><a href="https://ws2.sinaimg.cn/large/006tNc79ly1g26nks2ka8j31fi0ju0yl.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.10/android-studio-ide-191.5455988-windows32.zip">android-studio-ide-191.5455988-windows32.zip</a>
+                                </td>
+                                <td>1035908924 bytes</td>
+                                <td>6be99df6af5fec09f2ce5b83fa0f64ed6d308e4dc85e404a3450648b1e5a072c</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.10/android-studio-ide-191.5455988-mac.zip">android-studio-ide-191.5455988-mac.dmg</a>
+                                </td>
+                                <td>1028417377 bytes</td>
+                                <td>5ea62a3fd4ea035940fdc7a32b49979ea35f2afce7b5cdeea8b17f6f16c9485f</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.10/android-studio-ide-191.5455988-linux.tar.gz">android-studio-ide-191.5455988-linux.tar.gz</a>
+                                </td>
+                                <td>1042023423 bytes</td>
+                                <td>ee364dd93cb62a94240e25be66cb6c4dfe3a3cc5b5f191806bdf65cb1d5244bc</td>
+                            </tr>
                             <!-- 3.5 Canary 10 -->
                             <tr>
                                 <td rowspan="5">3.5 Canary 10</td>
@@ -473,146 +551,6 @@
                                 </td>
                                 <td>1035877800 bytes</td>
                                 <td>11d73105f17ceb9aef13a144266a1f87aa9c8bf1681dd6db09846b8597e9a20d</td>
-                            </tr>
-                            <!-- 3.4 RC 3 -->
-                            <tr>
-                                <td rowspan="5">3.4 RC 3</td>
-                            </tr>
-                            <tr>
-                                <td rowspan="2">Windows</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.17/android-studio-ide-183.5400832-windows.zip">android-studio-ide-183.5400832-windows.zip</a>
-                                </td>
-                                <td>1085195328 bytes</td>
-                                <td>549d16f4fa2b8ef9fa6c2e323f925967e75616cc2441c006e69b25bd93280e50</td>
-                                <td rowspan="5"><a href="https://ws3.sinaimg.cn/large/006tKfTcly1g1obanme56j31f20j87a5.jpg">查看</a></td>
-                            </tr>
-                            <tr>
-                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.17/android-studio-ide-183.5400832-windows32.zip">android-studio-ide-183.5400832-windows32.zip</a>
-                                </td>
-                                <td>1084669257 bytes</td>
-                                <td>f5c82425919f1f0700a191b68572bac80c1409280d76107f2f2b30b5564579dc</td>
-                            </tr>
-                            <tr>
-                                <td>Mac OS X</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.17/android-studio-ide-183.5400832-mac.zip">android-studio-ide-183.5400832-mac.dmg</a>
-                                </td>
-                                <td>1078054367 bytes</td>
-                                <td>3542060b8f14a6acfcd8b5094789a713da101699ce5de3991e628d74c80a5395</td>
-                            </tr>
-                            <tr>
-                                <td>Linux</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.17/android-studio-ide-183.5400832-linux.zip">android-studio-ide-183.5400832-linux.zip</a>
-                                </td>
-                                <td>1091186070 bytes</td>
-                                <td>01fb2de2c1650d99d5f4c9a706034780e712e0af8648243fdc0a36390ebb8aec</td>
-                            </tr>
-                            <!-- 3.5 Canary 9 -->
-                            <tr>
-                                <td rowspan="5">3.5 Canary 9</td>
-                            </tr>
-                            <tr>
-                                <td rowspan="2">Windows</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.8/android-studio-ide-191.5409101-windows.zip">android-studio-ide-191.5409101-windows.zip</a>
-                                </td>
-                                <td>1034276698 bytes</td>
-                                <td>72c0fd313aafcfedafe3b2b7db6845721c6ccd82a0fbcbd2736f77a64273a924</td>
-                                <td rowspan="5"><a href="https://ws1.sinaimg.cn/large/006tKfTcly1g1md1p3sctj31io0oy45p.jpg">查看</a></td>
-                            </tr>
-                            <tr>
-                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.8/android-studio-ide-191.5409101-windows32.zip">android-studio-ide-191.5409101-windows32.zip</a>
-                                </td>
-                                <td>1033750627 bytes</td>
-                                <td>868c0e2447896331520b14b056cf7d8b39b546d91cd5122b9210ed43ba73bd1f</td>
-                            </tr>
-                            <tr>
-                                <td>Mac OS X</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.8/android-studio-ide-191.5409101-mac.zip">android-studio-ide-191.5409101-mac.dmg</a>
-                                </td>
-                                <td>1026105382 bytes</td>
-                                <td>7e913ff563836f2daee06e3627ceaed9b65c15cd662c9c1778b3368cbe663b14</td>
-                            </tr>
-                            <tr>
-                                <td>Linux</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.8/android-studio-ide-191.5409101-linux.tar.gz">android-studio-ide-191.5409101-linux.tar.gz</a>
-                                </td>
-                                <td>1039748746 bytes</td>
-                                <td>f1a8963547b173b82c697f1455b08801fade27d39c0c86ac87a0760b082dcc19</td>
-                            </tr>
-                            <!-- 3.5 Canary 8 -->
-                            <tr>
-                                <td rowspan="5">3.5 Canary 8</td>
-                            </tr>
-                            <tr>
-                                <td rowspan="2">Windows</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.7/android-studio-ide-191.5375575-windows.zip">android-studio-ide-191.5375575-windows.zip</a>
-                                </td>
-                                <td>1033512799 bytes</td>
-                                <td>1d71c0427510c219a49f6d851182a03f57d1a4b9d74136ab4cb2ba0dc99bb59d</td>
-                                <td rowspan="5"><a href="https://ws3.sinaimg.cn/large/006tKfTcly1g1geig7rzpj315f0fawi3.jpg">查看</a></td>
-                            </tr>
-                            <tr>
-                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.7/android-studio-ide-191.5375575-windows32.zip">android-studio-ide-191.5375575-windows32.zip</a>
-                                </td>
-                                <td>1032986728 bytes</td>
-                                <td>a5ea8a4adef445257193cab3841fb138a7721573aef2c3de132fd19788edeb5d</td>
-                            </tr>
-                            <tr>
-                                <td>Mac OS X</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.7/android-studio-ide-191.5375575-mac.zip">android-studio-ide-191.5375575-mac.dmg</a>
-                                </td>
-                                <td>1025340448 bytes</td>
-                                <td>293080055c49c220ea818867343ec45be4431addf0cbcde484d0565adf8f58f8</td>
-                            </tr>
-                            <tr>
-                                <td>Linux</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.7/android-studio-ide-191.5375575-linux.zip">android-studio-ide-191.5375575-linux.zip</a>
-                                </td>
-                                <td>1039501588 bytes</td>
-                                <td>b2928ec9a1bce33972ef9fef51eaac490e466364b424986c5c9d4820b7f55a6f</td>
-                            </tr>
-                            <!-- 3.4 RC 2 -->
-                            <tr>
-                                <td rowspan="5">3.4 RC 2</td>
-                            </tr>
-                            <tr>
-                                <td rowspan="2">Windows</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.16/android-studio-ide-183.5370308-windows.zip">android-studio-ide-183.5370308-windows.zip</a>
-                                </td>
-                                <td>1085146949 bytes</td>
-                                <td>08dee6606ac36d804b21dd4a003e2b8928b21c497db75e3464762dd0bef34fcc</td>
-                                <td rowspan="5"><a href="https://ws2.sinaimg.cn/large/006tKfTcly1g138hek00lj31ea0k4afz.jpg">查看</a></td>
-                            </tr>
-                            <tr>
-                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.16/android-studio-ide-183.5370308-windows32.zip">android-studio-ide-183.5370308-windows32.zip</a>
-                                </td>
-                                <td>1084620878 bytes</td>
-                                <td>fa380bf5de945a3308e8c2c99c1da962f88ade946f2e61262f592c9908be03a6</td>
-                            </tr>
-                            <tr>
-                                <td>Mac OS X</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.16/android-studio-ide-183.5370308-mac.zip">android-studio-ide-183.5370308-mac.dmg</a>
-                                </td>
-                                <td>1078005988 bytes</td>
-                                <td>bc332ba7a8fee6c62cabb0b9a2eea47981e5f12dfe56c502c910d339999705f3</td>
-                            </tr>
-                            <tr>
-                                <td>Linux</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.16/android-studio-ide-183.5370308-linux.zip">android-studio-ide-183.5370308-linux.zip</a>
-                                </td>
-                                <td>1091137682 bytes</td>
-                                <td>090b1d6e39e9cc0b4e01943420eeecb8a611785e9cafe9dbedf0ff608f35ed34</td>
                             </tr>
                             <!-- 3.3.2 正式版 -->
                             <tr>
